初步完成上传图片接口
